# visdom

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  index.md  rustfmt.toml
.github/workflows/: test.yml
benches/: benchmark.rs
performance/: README.md  run.sh
performance/data/: index.html
performance/go/: go.mod  go.sum
performance/go/src/: main.go
performance/node/: .gitignore  index.js  package.json
performance/rust/: .gitignore  Cargo.toml
performance/rust/src/: main.rs
src/: lib.rs  macros.rs  main.rs
src/mesdoc/: constants.rs  error.rs  mod.rs  utils.rs
src/mesdoc/interface/: document.rs  element.rs  elements.rs  mod.rs  node.rs  text.rs  texts.rs  uncare.rs
src/mesdoc/rules/: all.rs  attr.rs  class.rs  id.rs  mod.rs  name.rs  pseudo.rs
src/mesdoc/selector/: mod.rs  pattern.rs  rule.rs
tests/: attr.rs  content.rs  dom.rs  error.rs  find.rs  insertion.rs  method.rs  mutation.rs  selector.rs  trait.rs
