[package]
name = "visdom"
version = "0.4.5"
edition = "2018"
description = "A html document syntax and operation library, use APIs similar to jquery, easy to use for web scraping and confused html."
keywords = ["html-parser", "dom", "jquery", "scrape", "crawl"]
authors = ["jxz_211 <jxz_211@163.com>"]
homepage = "https://github.com/fefit/visdom"
repository = "https://github.com/fefit/visdom"
documentation = "https://docs.rs/visdom/"
categories = ["web-programming"]
license = "MIT"
exclude = [".vscode/*.*", ".editorconfig", ".travis.yml", "src/main.rs", "performance/*.*"]

[dependencies]
rphtml = "0.5.2"
lazy_static = "1.4.0"
thiserror = "1.0.24"
regex = "1.4.3"

[dev-dependencies]
crossbeam = "0.8.0"
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false