[package]
name = "visdom"
version = "0.5.1"
edition = "2018"
description = "A html document syntax and operation library, use APIs similar to jquery, easy to use for web scraping and confused html."
keywords = ["html", "scrape", "jquery", "query", "selector"]
authors = ["jxz_211 <jxz_211@163.com>"]
homepage = "https://github.com/fefit/visdom"
repository = "https://github.com/fefit/visdom"
documentation = "https://docs.rs/visdom/"
categories = ["web-programming"]
license = "MIT"
exclude = [".vscode/*.*", ".editorconfig", ".travis.yml", "src/main.rs", "performance/*.*"]

[dependencies]
rphtml = "0.5.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"
regex = "1.4.3"

[dev-dependencies]
crossbeam = "0.8.0"
criterion = "0.3.3"

[features]
default = []
full = [
  "text",
  "insertion",
  "destory"
]
text = []
insertion = []
destory = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "benchmark"
harness = false